# llm_qa_service

./: .env.example  .gitignore  DEPLOYMENT.md  FINAL_TEST_REPORT.md  GRADIO_UI_INSTRUCTIONS.md  PRD.md  PROCESSING_REPORT.md  README.md  analysis_results.json  analyze_results.py  dataset_stats.json  export_winners_csv.py  full_analysis.json  full_test_report.json  generate_enriched_report.py  generate_quality_report.py  inn_enrichment_report.md  load_dataset_2026_01_23.py  load_new_dataset.py  load_remaining_2025_12_23.py  main.py  metrics_collector.py  migrate_purchase_number.py  migrate_purchase_number_v2.py  monitor_2025_12_test.sh  monitor_progress.sh  performance_test_results.json  process_unprocessed.py  pyproject.toml  qa_results_full.csv  quality_records_with_inn_and_purchase.csv  quality_simple.csv  quality_with_inn.tsv  requirements.txt  run_2025_12_week_dataset.py  run_dataset_test.py  run_full_dataset_test.py  sync_purchase_number.py  test_concurrent_6.py  test_concurrent_6_results.json  (+15 more)
api/: __init__.py  dependencies.py  routes.py  schemas.py
application/: __init__.py  orchestrator.py  response_parser.py
bad_responses/: UNIT_13fe37fbca0c4ac3_20260128_065454.txt  UNIT_169B8A0CB91C4282_20260209_103913.txt  UNIT_26d45c4fac414ea9_20260202_040545.txt  UNIT_280d48abeda64261_20260202_020707.txt  UNIT_4409B5574EA14B30_20260208_200714.txt  UNIT_4409B5574EA14B30_20260208_201828.txt  UNIT_4409B5574EA14B30_20260208_201919.txt  UNIT_60e0b0fb80d248cb_20260202_022225.txt  UNIT_6bfdc007528a4b79_20260202_034223.txt  UNIT_86B6BC9963D64C70_20260208_200620.txt  (+4 more)
(+78 files in other folders)
